crates/hird-parse/tests/snapshots/smoke__tool_decl.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 174
expression: "render_cst(\"tool Fetch : Url -> Response\")"
---
SOURCE_FILE
  TOOL_DECL
    TOOL_KW "tool"
    WHITESPACE " "
    IDENT "Fetch"
    WHITESPACE " "
    COLON ":"
    WHITESPACE " "
    IDENT "Url"
    WHITESPACE " "
    ARROW "->"
    WHITESPACE " "
    IDENT "Response"
