crates/hird-parse/tests/snapshots/smoke__type_alias_record.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"type alias LogArgs = { level: String, message: String }\")"
---
SOURCE_FILE
  TYPE_ALIAS_DECL
    TYPE_KW "type"
    WHITESPACE " "
    ALIAS_KW "alias"
    WHITESPACE " "
    IDENT "LogArgs"
    WHITESPACE " "
    EQ "="
    RECORD_TYPE
      WHITESPACE " "
      L_BRACE "{"
      RECORD_TYPE_FIELD
        WHITESPACE " "
        IDENT "level"
        COLON ":"
        WHITESPACE " "
        IDENT "String"
      COMMA ","
      RECORD_TYPE_FIELD
        WHITESPACE " "
        IDENT "message"
        COLON ":"
        WHITESPACE " "
        IDENT "String"
      WHITESPACE " "
      R_BRACE "}"
