crates/hird-parse/tests/snapshots/smoke__type_applied.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 256
expression: "render_cst(\"fn f(x: List<Int>) = x\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    PARAM_LIST
      PARAM
        IDENT "x"
        COLON ":"
        APP_TYPE
          WHITESPACE " "
          IDENT "List"
          TYPE_ARGS
            LT "<"
            IDENT "Int"
            GT ">"
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    IDENT "x"
